--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dev = [
   "pydocstyle>=6.3.0",
   "pytest>=8.4.1",
   "pytest-asyncio>=1.1.0",
+  "pytest-cov>=7.0.0",
   "ruff>=0.12.11",
   "types-pyyaml>=6.0.12.20250822",
 ]
