--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,25 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiofiles>=25.1.0",
     "aiohttp>=3.13.3",
     "asyncio>=4.0.0",
     "beartype>=0.22.9",
+    "ccxt>=4.5.31",
+    "duckdb>=1.4.3",
     "exchange-calendars>=4.12",
     "pandas>=2.3.3",
+    "pandera>=0.28.1",
     "polars>=1.36.1",
     "pydantic>=2.12.5",
     "pyyaml>=6.0.3",
+    "redis>=7.1.0",
     "structlog>=25.5.0",
 ]
 
 [dependency-groups]
 dev = [
+  "fakeredis>=2.33.0",
   "hypothesis>=6.123.17",
   "mypy>=1.17.1",
   "pandas-stubs>=2.3.2.250827",
@@ -26,7 +32,9 @@ dev = [
   "pytest-asyncio>=1.1.0",
   "pytest-cov>=7.0.0",
   "ruff>=0.12.11",
+  "types-aiofiles>=25.1.0.20251011",
   "types-pyyaml>=6.0.12.20250822",
+  "types-redis>=4.6.0.20241004",
 ]
 
 [build-system]
