--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "traxon-core"
 version = "0.1.0"
-description = "Add your description here"
+description = "Type-safe data models and utilities for executing retail crypto trading strategies."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
