--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
   "hypothesis>=6.123.17",
   "mypy>=1.17.1",
   "pandas-stubs>=2.3.2.250827",
+  "poethepoet>=0.40.0",
   "pydocstyle>=6.3.0",
   "pytest>=8.4.1",
   "pytest-asyncio>=1.1.0",
