--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=2.3.3",
     "pandera>=0.28.1",
     "polars>=1.36.1",
+    "psycopg[binary]>=3.3.2",
     "pydantic>=2.12.5",
     "pyyaml>=6.0.3",
     "redis>=7.1.0",
