--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandera>=0.28.1",
     "polars>=1.36.1",
     "psycopg[binary]>=3.3.2",
+    "pyarrow>=22.0.0",
     "pydantic>=2.12.5",
     "pyyaml>=6.0.3",
     "redis>=7.1.0",
