--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,21 @@ wheels/
 
 # Virtual environments
 .venv
+.venv-mutation
 
 # Testing-related files
 .hypothesis
 .coverage
 
-# Gemini-related files
+# AI-related files
+.claude
+CLAUDE.md
 .gemini
 GEMINI.md
 .serena
 conductor
+docs
+.nwave
+
+# Others
+TODOS.md
